[workspace]
members = [
  "token-wrap/program"
]
exclude = [
  "farms/farm-client",
  "farms/farm-ctrl",
  "farms/farm-rpc",
  "farms/farm-sdk",
  "farms/fund",
  "farms/router-main",
  "farms/router-raydium",
  "farms/router-saber",
  "farms/router-orca",
  "farms/vaults",
]

[profile.dev]
split-debuginfo = "unpacked"
