[package]
name = "spl-token-wrap"
version = "0.1.0"
description = "Solana Program Library Token Wrap"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2018"
 
[features]
no-entrypoint = []
test-sbf = []

[dependencies]
bytemuck = { version = "1.7.2", features = ["derive"] }
num_enum = "0.5"
solana-program = "1.11.6"
spl-associated-token-account = { version = "1.1", path = "../../associated-token-account/program", features = ["no-entrypoint"] }
spl-token = { version = "3.5", path = "../../token/program", features = ["no-entrypoint"] }
spl-token-2022 = { version = "0.4", path = "../../token/program-2022", features = ["no-entrypoint"] }
thiserror = "1.0"
tokio = "*"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
